app/assets/stylesheets/main.scss
@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');

@media (min-width: 1200px) {
  .container {
    max-width: 1300px;
  }
}

@media (max-width: 991px) {
  .container {
    max-width: 100%;
  }
}

html, body {
  -webkit-overflow-scrolling: touch;
  width: 100%;
  min-width: 100%;
  font-family: 'Lato', Arial, sans-serif;
  font-display: swap;
  font-weight: 400;
}

img { aspect-ratio: attr(width) / attr(height); }

p {
  color: #666666;
}

p.title {
  font-size: 21px;
  font-weight: 450;
}

p.subtitle {
  font-size: 18px;
  font-weight: 450;
  margin: 10px 0 10px 0;
}

p.spaced-subtitle {
  font-size: 18px;
  font-weight: 450;
  margin: 20px 0 20px 0;
}

h1 {
  display: inline;
  color: #666666;
  font-size: 21px;
  font-weight: 600;
  line-height: 30px;
}

h2 {
  display: inline;
  color: #666666;
  font-size: 21px;
  line-height: 35px;
  font-weight: 450;
}

h4 {
  color: #666666;
  font-size: 23px;
  font-weight: 600;
}

ul li {
  margin: 5px 0px 5px 0px;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
}

a {
  color: #f27242;
}

a:hover, a:focus {
  color:#e16a3e;
  text-decoration: none;
}

input[type=number]{
  width: 50px;
  text-align: center;
  color: #666666;
}

/* Remove up and down arrows from type number input */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    /* display: none; <- Crashes Chrome on hover */
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

/* Misc Customizations */
.badge-label {
  margin: 3px;
  font-size: 16px;
  padding: 2px 7px 4px;
}

.badge-success {
  background-color: #5cb85c;
}

.harm-reduction-box {
  margin: 20px 30px 60px 20px;
}

.padding-bottom {
  padding-bottom: 50px;
}

.text-center {
  text-align: center;
}

.fb-page-widget {
  margin-top: 70px;
  text-align: left;
}

.footer {
  background: #f3f3f3;
  border-color: #337ab7;
  padding: 25px 0px 55px 0px;
  margin-top: 25px;
}

.fa-lg {
  font-size: 1.66em;
}

span.bottomtip {
  display: inline;
  font-size: 14px;
  color: #666;
}

.sidenote {
  font-size: 14px;
}

.ads {
  margin: 10px auto 30px auto;
}

.popular-recipe-title {
  padding-bottom: 25px;
}

.recipe-title {
  margin-bottom: 25px;
}

.recipe-title h1 {
  font-size: 28px;
}

.recipe-content h2 {
  font-size: 19px;
}

i.icon-medium {
  position: relative;
  margin-right: 6px;
}

i.icon-large {
  position: relative;
  margin-right: 6px;
  top: 3px;
}

p.warning-item {
  padding-top: 10px;
}

p.spaced-content {
  padding-top: 10px;
}

.span-block {
  display: block;
}

.suggest-recipes {
  padding-top: 10px;
  text-align: left;
}

.fa-left-head {
  margin-top: auto;
  margin-bottom: auto;
}

